[package]
name = "tinysort"
version = "0.1.0"
authors = ["CensoredUsername <cens.username@gmail.com"]
edition = "2018"

description = "The lowest memory footprint sorting algorithm"
repository = "https://github.com/CensoredUsername/tinysort"

readme = "../README.md"
keywords = ["sorting"]
license = "MPL-2.0"

[dev-dependencies]
rand = "0.7.3"
